<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_add_model_layout_factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/model_manufactory"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_add_model_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/model_name"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_add_model_layout_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/model_display"
        android:textSize="20sp"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_add_model_layout_ramrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/model_ramrom"
        android:textSize="20sp"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_add_model_layout_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/model_camera"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_add_model_layout_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_model_layout" />

</LinearLayout>